Create function getPlayerChoice()
Takes an input from the user and converts the string to lower case

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 
         
     }
+    function getPlayerChoice(){
+        input = prompt("Enter your selection:")
+        playerSelection = input.toLowerCase()
+        return playerSelection
+    }
 
 </script>
