--- a/index.html
+++ b/index.html
@@ -19,34 +19,79 @@
         playerSelection = input.toLowerCase()
         return playerSelection
     }
+    function game(){
+        function playRound(computerSelection, playerSelection){
+            if (computerSelection === playerSelection){
+                console.log("Tie, the computer also picked " + computerSelection)
+                result = 0
+                return result
+            }
+            else if (playerSelection==="rock" && computerSelection=="paper"){
+                console.log("Computer Wins! Paper beats Rock!")
+                result = 2
+                return result
+            }
+            else if (playerSelection==="rock" && computerSelection=="scissors"){
+                console.log("You Win! Rock beats Scissors!")
+                result = 1
+                return result
+            }
+            else if (playerSelection==="paper" && computerSelection=="rock"){
+                console.log("You Win! Paper beats Rock!")
+                result = 1
+                return result
+            }
+            else if (playerSelection==="paper" && computerSelection=="scissors"){
+                console.log("Computer Wins! Scissors beat Paper!")
+                result = 2
+                return result
+            }
+            else if (playerSelection==="scissors" && computerSelection=="rock"){
+                console.log("Computer Wins! Rock beats Scissors!")
+                result = 2
+                return result
+            }
+            else if (playerSelection==="scissors" && computerSelection=="paper"){
+                console.log("You Win! Scissors beats Paper!")
+                result = 1
+                return result
+            }
+            else{
+                console.log("Incorrect Input! You Lose!")
+                result = 2
+                return result
+            }
+        }
+        playerWins = 0
+        computerWins = 0
+        for (let i=0; i<5; i++){
+            playRound(getComputerChoice(), getPlayerChoice())
+            if (result === 1){
+                playerWins +=1
+            }
+            else if (result === 2){
+                computerWins+=1
+            }
+            console.log("The score is You: " + playerWins + " Computer: " + computerWins)
 
-    function playRound(computerSelection, playerSelection){
-        if (computerSelection === playerSelection){
-            console.log("Tie, the computer also picked " + computerSelection)
         }
-        else if (playerSelection==="rock" && computerSelection=="paper"){
-            console.log("Computer Wins! Paper beats Rock!")
+        if (playerWins > computerWins){
+            console.log("You Win The Game!")
         }
-        else if (playerSelection==="rock" && computerSelection=="scissors"){
-            console.log("You Win! Rock beats Scissors!")
+
+        if (playerWins < computerWins){
+            console.log("Computer Wins The Game!")
         }
-        else if (playerSelection==="paper" && computerSelection=="rock"){
-            console.log("You Win! Paper beats Rock!")
-        }
-        else if (playerSelection==="paper" && computerSelection=="scissors"){
-            console.log("Computer Wins! Scissors beat Paper!")
-        }
-        else if (playerSelection==="scissors" && computerSelection=="rock"){
-            console.log("Computer Wins! Rock beats Scissors!")
-        }
-        else if (playerSelection==="scissors" && computerSelection=="paper"){
-            console.log("You Win! Scissors beats Paper!")
-        }
+
         else{
-            console.log("Incorrect Input! You Lose!")
+            console.log("Game Complete. It's a Draw!")
         }
     }
-    playRound(getComputerChoice(), getPlayerChoice())
+
+
+    game()
+    
+
 
 
 
